# bta-image-model

./: CMakeLists.txt  INSTALL  RUN
mask/: README.fmt  README.fmt.RU  holes.json  json.c  make_mask.m
src/: CMakeLists.txt  CPU.c  CUDA.cu  README  cmdlnopts.c  diaphragm.c  mkHartmann.c  parceargs.c  saveimg.c  usefull_macros.c  wrapper.c
src/include/: cmdlnopts.h  cutil_math.h  diaphragm.h  mkHartmann.h  parceargs.h  saveimg.h  usefull_macros.h  wrapper.h
src/locale/ru/: messages.po  ru.po  ru.po~
src/locale/ru/LC_MESSAGES/: mkHartmann.mo
src/test/: capability.cu
